# hodgepodge

./: LICENSE  README.md
advent_of_code/: README.md
advent_of_code/2015/problems/: day_1.md  day_2.md  day_3.md  day_4.md
advent_of_code/2015/src/com/themaskedcrusader/advent15/: Main.java
advent_of_code/2020/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12_part_1.py  day_12_part_2.py  day_13.py  day_14.py  day_15.py  day_16.py
advent_of_code/2020/problems/: day_01.md  day_02.md  day_03.md  day_04.md  day_05.md  day_06.md  day_08.md  day_09.md  day_10.md  day_11.md  day_12.md  day_13.md  day_14.md  day_15.md  day_16.md
advent_of_code/2020/pycommon/: advent.py
advent_of_code/2021/: CMakeLists.txt
advent_of_code/2021/advent/: 00.cpp  01a.cpp  01b.cpp  02a.cpp  02b.cpp  03a.cpp
advent_of_code/2021/cmake/: 02a  CMakeCache.txt  Makefile  cmake_install.cmake
advent_of_code/template/: python_template.py
code_eval/bash/easy/: challenge_01.sh  challenge_03.sh  challenge_04.sh  challenge_08.sh  challenge_18.sh  challenge_19.sh  challenge_20.sh  challenge_205.sh  challenge_21.sh  challenge_22.sh  challenge_25.sh  challenge_39.sh  challenge_93.sh
code_eval/bash/hard/: challenge_157.sh  challenge_239.sh
code_eval/bash/moderate/: challenge_12.sh
code_eval/cpp/: CMakeLists.txt
code_eval/cpp/easy/: challenge_01.cpp  challenge_03.cpp  challenge_04.cpp  challenge_08.cpp  challenge_113.cpp  challenge_122.cpp  challenge_140.cpp  challenge_156.cpp  challenge_167.cpp  challenge_18.cpp  challenge_183.cpp  challenge_19.cpp  challenge_199.cpp  challenge_20.cpp  challenge_205.cpp  challenge_208.cpp  challenge_21.cpp  challenge_214.cpp  challenge_22.cpp  challenge_220.cpp  challenge_222.cpp  challenge_23.cpp  challenge_235.cpp  challenge_237.cpp  challenge_24.cpp  challenge_240.cpp  challenge_25.cpp  challenge_26.cpp  challenge_29.cpp  challenge_39.cpp  challenge_83.cpp  challenge_91.cpp  challenge_93.cpp
code_eval/cpp/hard/: challenge_157.cpp  challenge_239.cpp  challenge_52.cpp
code_eval/cpp/moderate/: challenge_12.cpp  challenge_15.cpp  challenge_158.cpp  challenge_16.cpp  challenge_161.cpp  challenge_27.cpp  challenge_46.cpp  challenge_89.cpp
code_eval/input/easy/: challenge_08.file  challenge_18.file  challenge_183.file  challenge_199.file  challenge_20.file  challenge_205.file  challenge_22.file  challenge_235.file  challenge_240.file  challenge_93.file
code_eval/input/hard/: challenge_52.file
code_eval/input/moderate/: challenge_12.file  challenge_158.file
code_eval/java/: FileReadTemplate.java
code_eval/java/easy/: Challenge01.java  Challenge03.java  Challenge04.java  Challenge08.java  Challenge113.java  Challenge18.java  Challenge19.java  Challenge20.java  Challenge205.java  Challenge21.java  Challenge22.java  Challenge23.java  Challenge25.java  Challenge39.java  Challenge93.java
code_eval/java/hard/: Challenge157.java  Challenge239.java  Challenge52.java
code_eval/java/magic_square/: MagicSquare.java
code_eval/java/moderate/: Challenge12.java  Challenge15.java  Challenge158.java  Challenge16.java  Challenge27.java  Challenge46.java  Challenge89.java
math_problems/: README.md
math_problems/hydra_game/cpp/: CMakeLists.txt  hydra.cpp  hydra_2.cpp
math_problems/hydra_game/java/: pom.xml
math_problems/witness_numbers/: main.py  millar_rabin_test.py  multiplication.py
mpmp/million/: million.py
(+17 files in other folders)
